@@ -2442,7 +2442,7 @@ class ResultHandlerBinaryFile(ResultHandler):
         Dumps the header and name to file.
         """
         self._file.write(header.tobytes(order="F"))
-        self._file.write(np.compat.asbytes(name +"\0"))
+        self._file.write(name.encode() + b"\0")
 
     def _write_header(self, name, nbr_rows, nbr_cols, data_type):
         """
