@@ -1,4 +1,8 @@
 --- CHANGELOG ---
+
+--- PyFMI-2.13.1 ---
+    * Numpy 2.x support
+
 --- PyFMI-2.13.0 ---
     * Upgraded to Cython3.
 
